--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,9 @@ androidx_test_ext = "1.1.3"
 androidx_test = "1.4.0"
 appcompat = "1.6.0-alpha01"
 constraint_layout = "2.1.3"
+navigation_fragments = "2.5.0-beta01"
+navigation_ui = "2.5.0-beta01"
+fragments = "1.5.0-beta01"
 material = "1.7.0-alpha01"
 core_ktx = "1.9.0-alpha02"
 espresso_core = "3.4.0"
@@ -21,6 +24,9 @@ junit = { module = "junit:junit", version.ref = "junit" }
 androidx_appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 androidx_constraint_layout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraint.layout" }
 androidx_core_ktx = { module = "androidx.core:core-ktx", version.ref = "core.ktx" }
+androidx_fragments_ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragments" }
+androidx_navigation_fragments_ktx = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigation_fragments" }
+androidx_navigation_ui_ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigation_ui" }
 google_material = { module = "com.google.android.material:material", version.ref = "material" }
 androidx_test_rules = { module = "androidx.test:rules", version.ref = "androidx.test" }
 androidx_test_runner = { module = "androidx.test:runner", version.ref = "androidx.test" }
