--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ constraint_layout = "2.1.3"
 navigation_fragments = "2.5.0-beta01"
 navigation_ui = "2.5.0-beta01"
 fragments = "1.5.0-beta01"
+subscale_imageview = "3.1.0"
 material = "1.7.0-alpha01"
 core_ktx = "1.9.0-alpha02"
 espresso_core = "3.4.0"
@@ -28,6 +29,7 @@ androidx_fragments_ktx = { module = "androidx.fragment:fragment-ktx", version.re
 androidx_navigation_fragments_ktx = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigation_fragments" }
 androidx_navigation_ui_ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigation_ui" }
 google_material = { module = "com.google.android.material:material", version.ref = "material" }
+subscale_imageview = { module = "com.davemorrissey.labs:subsampling-scale-image-view-androidx", version.ref = "subscale_imageview" }
 androidx_test_rules = { module = "androidx.test:rules", version.ref = "androidx.test" }
 androidx_test_runner = { module = "androidx.test:runner", version.ref = "androidx.test" }
 androidx_test_ext_junit = { module = "androidx.test.ext:junit", version.ref = "androidx.test.ext" }
