--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,8 +8,7 @@ androidx_test_ext = "1.1.3"
 androidx_test = "1.4.0"
 appcompat = "1.6.0-alpha01"
 constraint_layout = "2.1.3"
-navigation_fragments = "2.5.0-beta01"
-navigation_ui = "2.5.0-beta01"
+navigation = "2.5.0-beta01"
 fragments = "1.5.0-beta01"
 subscale_imageview = "3.10.0"
 material = "1.7.0-alpha01"
@@ -26,8 +25,10 @@ androidx_appcompat = { module = "androidx.appcompat:appcompat", version.ref = "a
 androidx_constraint_layout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraint.layout" }
 androidx_core_ktx = { module = "androidx.core:core-ktx", version.ref = "core.ktx" }
 androidx_fragments_ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragments" }
-androidx_navigation_fragments_ktx = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigation_fragments" }
-androidx_navigation_ui_ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigation_ui" }
+androidx_navigation_fragments_ktx = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigation" }
+androidx_navigation_ui_ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigation" }
+androidx_navigation_dynamic_features = { module = "androidx.navigation:navigation-dynamic-features-fragment", version.ref = "navigation" }
+androidx_navigation_safe_args = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "navigation" }
 google_material = { module = "com.google.android.material:material", version.ref = "material" }
 subscale_imageview = { module = "com.davemorrissey.labs:subsampling-scale-image-view-androidx", version.ref = "subscale_imageview" }
 androidx_test_rules = { module = "androidx.test:rules", version.ref = "androidx.test" }
