--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ navigation = "2.5.0-beta01"
 fragments = "1.5.0-beta01"
 subscale_imageview = "3.10.0"
 material = "1.7.0-alpha01"
+gson = "2.9.0"
 core_ktx = "1.9.0-alpha02"
 espresso_core = "3.4.0"
 compile_sdk_version = "31"
@@ -30,6 +31,7 @@ androidx_navigation_ui_ktx = { module = "androidx.navigation:navigation-ui-ktx",
 androidx_navigation_dynamic_features = { module = "androidx.navigation:navigation-dynamic-features-fragment", version.ref = "navigation" }
 androidx_navigation_safe_args = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "navigation" }
 google_material = { module = "com.google.android.material:material", version.ref = "material" }
+google_gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 subscale_imageview = { module = "com.davemorrissey.labs:subsampling-scale-image-view-androidx", version.ref = "subscale_imageview" }
 androidx_test_rules = { module = "androidx.test:rules", version.ref = "androidx.test" }
 androidx_test_runner = { module = "androidx.test:runner", version.ref = "androidx.test" }
