--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ constraint_layout = "2.1.3"
 navigation = "2.5.0-beta01"
 fragments = "1.5.0-beta01"
 subscale_imageview = "3.10.0"
+lifecycle = "2.5.0-beta01"
 material = "1.7.0-alpha01"
 gson = "2.9.0"
 core_ktx = "1.9.0-alpha02"
@@ -30,6 +31,8 @@ androidx_navigation_fragments_ktx = { module = "androidx.navigation:navigation-f
 androidx_navigation_ui_ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigation" }
 androidx_navigation_dynamic_features = { module = "androidx.navigation:navigation-dynamic-features-fragment", version.ref = "navigation" }
 androidx_navigation_safe_args = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "navigation" }
+androidx_lifecycle_viewmodel_ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
+androidx_lifecycle_livedata_ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycle" }
 google_material = { module = "com.google.android.material:material", version.ref = "material" }
 google_gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 subscale_imageview = { module = "com.davemorrissey.labs:subsampling-scale-image-view-androidx", version.ref = "subscale_imageview" }
