--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,8 @@ subscale_imageview = "3.10.0"
 lifecycle = "2.5.0-beta01"
 material = "1.7.0-alpha01"
 gson = "2.9.0"
+picasso = "2.8"
+carouselview = "d46b3c394f"
 core_ktx = "1.9.0-alpha02"
 espresso_core = "3.4.0"
 compile_sdk_version = "31"
@@ -35,6 +37,8 @@ androidx_lifecycle_viewmodel_ktx = { module = "androidx.lifecycle:lifecycle-view
 androidx_lifecycle_livedata_ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycle" }
 google_material = { module = "com.google.android.material:material", version.ref = "material" }
 google_gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
+squareup_picasso = { module = "com.squareup.picasso:picasso", version.ref = "picasso" }
+sayyam_carouselview = { module = "com.github.sayyam:carouselview", version.ref = "carouselview" }
 subscale_imageview = { module = "com.davemorrissey.labs:subsampling-scale-image-view-androidx", version.ref = "subscale_imageview" }
 androidx_test_rules = { module = "androidx.test:rules", version.ref = "androidx.test" }
 androidx_test_runner = { module = "androidx.test:runner", version.ref = "androidx.test" }
