--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="org.kimp.witelokk.museum.app">
+    
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:name=".MuseumApplication"
