--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ lifecycle = "2.5.0-beta01"
 material = "1.7.0-alpha01"
 gson = "2.9.0"
 picasso = "2.8"
+zxing = "4.3.0"
 carouselview = "d46b3c394f"
 core_ktx = "1.9.0-alpha02"
 espresso_core = "3.4.0"
@@ -39,6 +40,7 @@ google_material = { module = "com.google.android.material:material", version.ref
 google_gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 squareup_picasso = { module = "com.squareup.picasso:picasso", version.ref = "picasso" }
 sayyam_carouselview = { module = "com.github.sayyam:carouselview", version.ref = "carouselview" }
+journeyapps_zxing = { module = "com.journeyapps:zxing-android-embedded", version.ref = "zxing" }
 subscale_imageview = { module = "com.davemorrissey.labs:subsampling-scale-image-view-androidx", version.ref = "subscale_imageview" }
 androidx_test_rules = { module = "androidx.test:rules", version.ref = "androidx.test" }
 androidx_test_runner = { module = "androidx.test:runner", version.ref = "androidx.test" }
