--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,8 @@ material = "1.7.0-alpha01"
 gson = "2.9.0"
 picasso = "2.8"
 zxing = "4.3.0"
+okhttp = "4.9.3"
+picasso_okhttp = "1.1.0"
 carouselview = "d46b3c394f"
 core_ktx = "1.9.0-alpha02"
 espresso_core = "3.4.0"
@@ -39,6 +41,8 @@ androidx_lifecycle_livedata_ktx = { module = "androidx.lifecycle:lifecycle-lived
 google_material = { module = "com.google.android.material:material", version.ref = "material" }
 google_gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 squareup_picasso = { module = "com.squareup.picasso:picasso", version.ref = "picasso" }
+squareup_okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+jakewharton_picasso_okhttp = { module = "com.jakewharton.picasso:picasso2-okhttp3-downloader", version.ref = "picasso_okhttp" }
 sayyam_carouselview = { module = "com.github.sayyam:carouselview", version.ref = "carouselview" }
 journeyapps_zxing = { module = "com.journeyapps:zxing-android-embedded", version.ref = "zxing" }
 subscale_imageview = { module = "com.davemorrissey.labs:subsampling-scale-image-view-androidx", version.ref = "subscale_imageview" }
